# GOrchestrator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT.md  main.py  pyproject.toml  test_proxy.json
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  state.json
.github/workflows/: ci.yml
docs/: SYSTEM_DIAGRAM.md  architecture.md  developer_guide.md  setup_guide.md  user_guide.md
docs/plans/: 2026-03-02-git-cleanup-test-fix-design.md  2026-03-02-git-cleanup-test-fix.md
src/: __init__.py
src/commands/: __init__.py  completer.py  handlers.py  help.py  parser.py
src/core/: __init__.py  checkpoint_manager.py  config.py  engine.py  json_registry.py  llm_pool.py  manager.py  sub_manager.py  team.py  worker.py  worker_registry.py
src/core/manager_profiles/: advanced.yaml  custom.yaml  default.yaml  minimal.yaml  rules.yaml
src/core/sub_manager_profiles/: architect.yaml  performance.yaml  security.yaml
src/ui/: __init__.py  console.py
src/utils/: __init__.py  parser.py
src/worker_core/: __init__.py  pyproject.toml
src/worker_core/.miniswe/: .gitignore
src/worker_core/.miniswe/configs/: live.yaml  livesweagent.yaml
src/worker_core/minisweagent/config/: __init__.py
src/worker_core/minisweagent/environments/: docker.py  local.py
tests/: test_checkpoint_manager.py  test_commands_parser.py  test_config.py  test_engine.py  test_handlers.py  test_llm_pool.py  test_manager.py  test_parser.py  test_sub_manager.py  test_team.py  test_worker.py
(+1 files in other folders)
