[project]
name = "gorchestrator"
version = "0.1.0"
description = "Manager/Controller for Mini-SWE-GOCore agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "litellm>=1.40.0",
]

[project.scripts]
gorchestrator = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
