[project]
name = "gorchestrator"
version = "0.1.1"
description = "AI Orchestrator with integrated worker core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "litellm>=1.75.5",
    "prompt-toolkit>=3.0.52",
    # Worker core (Mini-SWE-GOCore)
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "jinja2>=3.1.0",
    "tenacity>=8.0.0",
    "typer>=0.9.0",
    "platformdirs>=3.0.0",
    "openai>=1.0.0,!=1.100.0,!=1.100.1",
]

[project.scripts]
gorchestrator = "src.core:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "bandit>=1.8.0",
]
